--- a/style/pages/_feedback.scss
+++ b/style/pages/_feedback.scss
@@ -21,7 +21,7 @@
 
    &__main {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(36rem, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(31rem, 1fr));
       align-items: center;
       justify-content: center;
       gap: 7rem;
